[gd_scene load_steps=109 format=3 uid="uid://bkkciq1kt5aco"]

[ext_resource type="Script" path="res://Controller.gd" id="1_1tae5"]
[ext_resource type="Script" path="res://Ball.gd" id="1_q7fn6"]
[ext_resource type="Texture2D" uid="uid://bdnbrqjnyi8oh" path="res://icon.svg" id="2_67n3d"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2D.gd" id="3_4le1s"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_5ypob"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="5_uk086"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/shape_closed.gd" id="7_de7gc"]
[ext_resource type="Script" path="res://addons/rmsmartshape/vertex_properties.gd" id="8_h7fck"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/point.gd" id="9_aunbv"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/point_array.gd" id="10_s8fic"]
[ext_resource type="Script" path="res://addons/rmsmartshape/materials/edge_material.gd" id="11_mc6st"]
[ext_resource type="Script" path="res://addons/rmsmartshape/normal_range.gd" id="12_8tay4"]
[ext_resource type="Script" path="res://addons/rmsmartshape/materials/shape_material.gd" id="12_xh0sm"]
[ext_resource type="Script" path="res://addons/rmsmartshape/materials/edge_material_metadata.gd" id="13_6ufj8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dqnmd"]
radius = 100.0

[sub_resource type="Curve" id="Curve_lorpo"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_w0c8n"]
curve = SubResource("Curve_lorpo")

[sub_resource type="Curve" id="Curve_25ywn"]
_data = [Vector2(0, 0.250113), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dqq5u"]
curve = SubResource("Curve_25ywn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tevev"]
particle_flag_disable_z = true
angle_max = 360.0
gravity = Vector3(0, -25, 0)
damping_min = 10.0
damping_max = 20.0
scale_min = 8.0
scale_max = 16.0
scale_curve = SubResource("CurveTexture_dqq5u")
alpha_curve = SubResource("CurveTexture_w0c8n")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_g14fu"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4arlb"]
width = 16
height = 16
noise = SubResource("FastNoiseLite_g14fu")

[sub_resource type="Resource" id="Resource_xhcx7"]
script = ExtResource("4_5ypob")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_w3f75"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_y7oag"]
script = ExtResource("9_aunbv")
position = Vector2(-193.855, -605.597)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_w3f75")

[sub_resource type="Resource" id="Resource_m2lpg"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_e3j5s"]
script = ExtResource("9_aunbv")
position = Vector2(-193.855, -605.597)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_m2lpg")

[sub_resource type="Resource" id="Resource_4ky3e"]
script = ExtResource("8_h7fck")
texture_idx = 6
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_vdse6"]
script = ExtResource("9_aunbv")
position = Vector2(4348.84, 1202.92)
point_in = Vector2(-556.171, -536.993)
point_out = Vector2(556.171, 536.993)
properties = SubResource("Resource_4ky3e")

[sub_resource type="Resource" id="Resource_gstv4"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_nenmc"]
script = ExtResource("9_aunbv")
position = Vector2(6364.34, 1232.72)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_gstv4")

[sub_resource type="Resource" id="Resource_68qa2"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_s5usg"]
script = ExtResource("9_aunbv")
position = Vector2(6318.01, 1708.03)
point_in = Vector2(-76.7998, -153.6)
point_out = Vector2(76.7998, 153.6)
properties = SubResource("Resource_68qa2")

[sub_resource type="Resource" id="Resource_xm8uu"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_wmi4c"]
script = ExtResource("9_aunbv")
position = Vector2(7400.81, 2240.08)
point_in = Vector2(-767.134, -153.427)
point_out = Vector2(767.134, 153.427)
properties = SubResource("Resource_xm8uu")

[sub_resource type="Resource" id="Resource_vj1ur"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_8qcos"]
script = ExtResource("9_aunbv")
position = Vector2(11735.8, 2112.09)
point_in = Vector2(-767.133, 326.031)
point_out = Vector2(767.133, -326.031)
properties = SubResource("Resource_vj1ur")

[sub_resource type="Resource" id="Resource_a7300"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_4in67"]
script = ExtResource("9_aunbv")
position = Vector2(-91.833, 3342.82)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_a7300")

[sub_resource type="Resource" id="Resource_v2npp"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_2ug7r"]
script = ExtResource("9_aunbv")
position = Vector2(3559.43, -164.422)
point_in = Vector2(-383.566, -345.21)
point_out = Vector2(383.566, 345.21)
properties = SubResource("Resource_v2npp")

[sub_resource type="Resource" id="Resource_j16ln"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_nndbh"]
script = ExtResource("9_aunbv")
position = Vector2(1672.27, -124.55)
point_in = Vector2(-978.095, -38.356)
point_out = Vector2(978.095, 38.356)
properties = SubResource("Resource_j16ln")

[sub_resource type="Resource" id="Resource_84lbo"]
script = ExtResource("8_h7fck")
texture_idx = 4
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_wq6gy"]
script = ExtResource("9_aunbv")
position = Vector2(13104.5, 1412.45)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_84lbo")

[sub_resource type="Resource" id="Resource_1m4h1"]
script = ExtResource("8_h7fck")
texture_idx = -4
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_ni6o6"]
script = ExtResource("9_aunbv")
position = Vector2(13773.9, 1507.31)
point_in = Vector2(-558.972, 228.55)
point_out = Vector2(526.682, -185.497)
properties = SubResource("Resource_1m4h1")

[sub_resource type="Resource" id="Resource_6aldo"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_6y03c"]
script = ExtResource("9_aunbv")
position = Vector2(16788.3, 339.772)
point_in = Vector2(-527.41, 312.141)
point_out = Vector2(527.41, -312.141)
properties = SubResource("Resource_6aldo")

[sub_resource type="Resource" id="Resource_j7h2g"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_beqn1"]
script = ExtResource("9_aunbv")
position = Vector2(18942.7, 82.5903)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_j7h2g")

[sub_resource type="Resource" id="Resource_4dll0"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_rrtye"]
script = ExtResource("9_aunbv")
position = Vector2(21453.7, -801.908)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_4dll0")

[sub_resource type="Resource" id="Resource_r6ef1"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_gle4v"]
script = ExtResource("9_aunbv")
position = Vector2(23801.5, -540.057)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_r6ef1")

[sub_resource type="Resource" id="Resource_fh1uu"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_dnoae"]
script = ExtResource("9_aunbv")
position = Vector2(26155.9, -879.829)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_fh1uu")

[sub_resource type="Resource" id="Resource_o4ai0"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_m8pb1"]
script = ExtResource("9_aunbv")
position = Vector2(26779.2, 3557.45)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_o4ai0")

[sub_resource type="Resource" id="Resource_kqjdx"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_gm7o4"]
script = ExtResource("9_aunbv")
position = Vector2(17019.5, -209.043)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_kqjdx")

[sub_resource type="Resource" id="Resource_pswtm"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_nqwwi"]
script = ExtResource("9_aunbv")
position = Vector2(26847.8, -1364.72)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_pswtm")

[sub_resource type="Resource" id="Resource_pu3mi"]
script = ExtResource("10_s8fic")
_points = {
0: SubResource("Resource_y7oag"),
3: SubResource("Resource_e3j5s"),
5: SubResource("Resource_vdse6"),
6: SubResource("Resource_nenmc"),
7: SubResource("Resource_s5usg"),
8: SubResource("Resource_wmi4c"),
9: SubResource("Resource_8qcos"),
13: SubResource("Resource_4in67"),
15: SubResource("Resource_2ug7r"),
16: SubResource("Resource_nndbh"),
17: SubResource("Resource_wq6gy"),
19: SubResource("Resource_ni6o6"),
20: SubResource("Resource_6y03c"),
23: SubResource("Resource_beqn1"),
24: SubResource("Resource_rrtye"),
25: SubResource("Resource_gle4v"),
26: SubResource("Resource_dnoae"),
27: SubResource("Resource_m8pb1"),
28: SubResource("Resource_gm7o4"),
29: SubResource("Resource_nqwwi")
}
_point_order = Array[int]([0, 16, 15, 5, 6, 7, 8, 9, 17, 19, 20, 28, 23, 24, 25, 26, 29, 27, 13, 3])
_constraints = {
Array[int]([0, 3]): 15
}
_next_key = 34
_material_overrides = {}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_dfneh"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_5huky"]
width = 64
height = 32
seamless = true
noise = SubResource("FastNoiseLite_dfneh")

[sub_resource type="Resource" id="Resource_spxgd"]
script = ExtResource("11_mc6st")
textures = Array[Texture2D]([SubResource("NoiseTexture2D_5huky")])
textures_corner_outer = Array[Texture2D]([])
textures_corner_inner = Array[Texture2D]([])
textures_taper_left = Array[Texture2D]([])
textures_taper_right = Array[Texture2D]([])
randomize_texture = false
use_corner_texture = false
use_taper_texture = false
fit_mode = 1

[sub_resource type="Resource" id="Resource_lbw1j"]
script = ExtResource("12_8tay4")
begin = 0.0
distance = 180.0
edgeRendering = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_7u08n"]
script = ExtResource("13_6ufj8")
edge_material = SubResource("Resource_spxgd")
normal_range = SubResource("Resource_lbw1j")
weld = true
render = true
z_index = 0
z_as_relative = true
offset = -1.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_bayil"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8hlgh"]
width = 1024
height = 1024
seamless = true
noise = SubResource("FastNoiseLite_bayil")

[sub_resource type="Resource" id="Resource_bosvv"]
script = ExtResource("12_xh0sm")
_edge_meta_materials = Array[ExtResource("13_6ufj8")]([SubResource("Resource_7u08n")])
fill_textures = Array[Texture2D]([SubResource("NoiseTexture2D_8hlgh")])
fill_texture_z_index = -10
fill_texture_show_behind_parent = false
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="Resource" id="Resource_3mvyq"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_vyhal"]
script = ExtResource("9_aunbv")
position = Vector2(13180.8, 960.477)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_3mvyq")

[sub_resource type="Resource" id="Resource_io4ra"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_22q5b"]
script = ExtResource("9_aunbv")
position = Vector2(13384, 1089.89)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_io4ra")

[sub_resource type="Resource" id="Resource_x3dj4"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_uxawo"]
script = ExtResource("9_aunbv")
position = Vector2(16339.8, -304.645)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_x3dj4")

[sub_resource type="Resource" id="Resource_enui0"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_1tyi6"]
script = ExtResource("9_aunbv")
position = Vector2(13180.8, 960.477)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_enui0")

[sub_resource type="Resource" id="Resource_anait"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_6t4aw"]
script = ExtResource("9_aunbv")
position = Vector2(16247.1, -126.919)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_anait")

[sub_resource type="Resource" id="Resource_p18ne"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_awiao"]
script = ExtResource("9_aunbv")
position = Vector2(13640.4, 844.834)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_p18ne")

[sub_resource type="Resource" id="Resource_hl12d"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_6t4ur"]
script = ExtResource("9_aunbv")
position = Vector2(14848.5, -300.465)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_hl12d")

[sub_resource type="Resource" id="Resource_oi03q"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_mh8xh"]
script = ExtResource("9_aunbv")
position = Vector2(16073.3, -178.169)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_oi03q")

[sub_resource type="Resource" id="Resource_y1h1p"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_qfoi8"]
script = ExtResource("9_aunbv")
position = Vector2(15849.6, -137.486)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_y1h1p")

[sub_resource type="Resource" id="Resource_h2kh4"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_d2f8s"]
script = ExtResource("9_aunbv")
position = Vector2(13728, 1016.64)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_h2kh4")

[sub_resource type="Resource" id="Resource_smp4q"]
script = ExtResource("10_s8fic")
_points = {
0: SubResource("Resource_vyhal"),
1: SubResource("Resource_22q5b"),
2: SubResource("Resource_uxawo"),
3: SubResource("Resource_1tyi6"),
4: SubResource("Resource_6t4aw"),
5: SubResource("Resource_awiao"),
6: SubResource("Resource_6t4ur"),
7: SubResource("Resource_mh8xh"),
8: SubResource("Resource_qfoi8"),
9: SubResource("Resource_d2f8s")
}
_point_order = Array[int]([3, 5, 6, 8, 7, 2, 4, 9, 1, 0])
_constraints = {
Array[int]([0, 3]): 15
}
_next_key = 10
_material_overrides = {}

[sub_resource type="Resource" id="Resource_trby0"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_2nlyh"]
script = ExtResource("9_aunbv")
position = Vector2(12394.6, 1080.31)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_trby0")

[sub_resource type="Resource" id="Resource_ehvwm"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_c6sk6"]
script = ExtResource("9_aunbv")
position = Vector2(12228.2, 1355.8)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_ehvwm")

[sub_resource type="Resource" id="Resource_70mfw"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_73ubu"]
script = ExtResource("9_aunbv")
position = Vector2(8925.78, 1509.4)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_70mfw")

[sub_resource type="Resource" id="Resource_cys8i"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_g2chq"]
script = ExtResource("9_aunbv")
position = Vector2(12394.6, 1080.31)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_cys8i")

[sub_resource type="Resource" id="Resource_sin2j"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_oooay"]
script = ExtResource("9_aunbv")
position = Vector2(8490.58, 728.603)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_sin2j")

[sub_resource type="Resource" id="Resource_kfuhw"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_rotop"]
script = ExtResource("9_aunbv")
position = Vector2(11767.4, 1253.4)
point_in = Vector2(-601.6, 0)
point_out = Vector2(396.8, 0)
properties = SubResource("Resource_kfuhw")

[sub_resource type="Resource" id="Resource_bivaq"]
script = ExtResource("8_h7fck")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_oa1lm"]
script = ExtResource("9_aunbv")
position = Vector2(11889.7, 1525.46)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_bivaq")

[sub_resource type="Resource" id="Resource_rtlxv"]
script = ExtResource("10_s8fic")
_points = {
0: SubResource("Resource_2nlyh"),
1: SubResource("Resource_c6sk6"),
2: SubResource("Resource_73ubu"),
3: SubResource("Resource_g2chq"),
4: SubResource("Resource_oooay"),
5: SubResource("Resource_rotop"),
6: SubResource("Resource_oa1lm")
}
_point_order = Array[int]([0, 1, 6, 2, 4, 5, 3])
_constraints = {
Array[int]([0, 3]): 15
}
_next_key = 7
_material_overrides = {}

[node name="Node2D" type="Node2D"]

[node name="Ball" type="RigidBody2D" parent="." node_paths=PackedStringArray("particles")]
position = Vector2(17, 135)
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_q7fn6")
particles = NodePath("../Controller/GPUParticles2D")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_dqnmd")

[node name="Polygon2D" type="Polygon2D" parent="Ball"]
polygon = PackedVector2Array(49, -87, 86, -51, 100, 1, 87, 51, 53, 86, 1, 101, -50, 87, -86, 52, -100, 1, -87, -49, -52, -84, 0, -100)

[node name="Icon" type="Sprite2D" parent="Ball"]
texture = ExtResource("2_67n3d")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Ball"]
remote_path = NodePath("../../Controller")
update_rotation = false
update_scale = false

[node name="Controller" type="Node2D" parent="." node_paths=PackedStringArray("body", "camera")]
position = Vector2(17, 135)
script = ExtResource("1_1tae5")
body = NodePath("../Ball")
camera = NodePath("../PhantomCamera2D")

[node name="CameraScale" type="Node2D" parent="Controller"]
scale = Vector2(0.8, 0.4)

[node name="CameraTarget" type="Marker2D" parent="Controller/CameraScale"]

[node name="Line2D" type="Line2D" parent="Controller"]
points = PackedVector2Array(1.45519e-11, 1.45519e-11, 50, 1.45519e-11)
default_color = Color(1, 0, 0, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="Controller"]
z_index = -10
emitting = false
amount = 1024
process_material = SubResource("ParticleProcessMaterial_tevev")
texture = SubResource("NoiseTexture2D_4arlb")
lifetime = 2.5
one_shot = true

[node name="PhantomCamera2D" type="Node2D" parent="."]
position = Vector2(17, 135)
script = ExtResource("3_4le1s")
priority_override = false
priority = 0
zoom = Vector2(1, 1)
follow_mode = 1
follow_target = NodePath("../Controller/CameraScale/CameraTarget")
follow_parameters/damping = false
frame_preview = true
pixel_perfect = false
limit/draw_limits = true
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
limit/limit_node_target = NodePath("")
limit/smoothed = false
tween_parameters = SubResource("Resource_xhcx7")
tween_on_load = true
inactive_update_mode = 0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(17, 135)
position_smoothing_speed = 10.0
editor_draw_limits = true

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("5_uk086")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-108.222, 890.108)

[node name="SS2D_Shape_Closed" type="Node2D" parent="StaticBody2D"]
texture_repeat = 2
script = ExtResource("7_de7gc")
_points = SubResource("Resource_pu3mi")
shape_material = SubResource("Resource_bosvv")
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
modulate = Color(1, 1, 1, 0.3)
polygon = PackedVector2Array(-193.984, -605.782, 372.422, -379.458, 968.054, -215.896, 1311.26, -156.233, 1672.27, -124.551, 2018.45, -129.41, 2325.83, -163.144, 2838.8, -259.556, 3051.66, -293.397, 3148.77, -300.417, 3240.29, -298.434, 3284.09, -293.503, 3326.66, -285.645, 3368.05, -274.636, 3408.33, -260.249, 3447.55, -242.259, 3485.77, -220.442, 3523.05, -194.571, 3559.43, -164.422, 3625.4, -98.0773, 3680.66, -28.5815, 3727.05, 43.936, 3766.38, 119.346, 3955.79, 625.323, 4044.8, 811.274, 4102.33, 906.911, 4170.97, 1004.15, 4252.53, 1102.86, 4348.84, 1202.92, 4403.56, 1250.25, 4463.13, 1291.75, 4527.13, 1327.69, 4595.13, 1358.38, 4666.68, 1384.07, 4741.37, 1405.08, 4898.4, 1434.12, 5062.75, 1447.78, 5230.97, 1448.33, 5565.15, 1419.19, 6127.63, 1303.58, 6364.52, 1232.53, 6312.38, 1412.77, 6298.92, 1490.14, 6292.85, 1568.96, 6293.77, 1607.13, 6297.95, 1643.51, 6305.87, 1677.38, 6311.39, 1693.15, 6318.01, 1708.03, 6334.4, 1737.63, 6355.12, 1768.7, 6380.72, 1801.02, 6411.72, 1834.39, 6448.67, 1868.59, 6492.09, 1903.42, 6600.54, 1974.12, 6741.34, 2044.81, 6918.79, 2113.82, 7400.81, 2240.08, 8293.91, 2330.66, 9568.3, 2355.88, 10842.7, 2291.21, 11360.7, 2217.49, 11569.1, 2168.94, 11735.8, 2112.09, 13104.6, 1412.3, 13110.4, 1425.9, 13118.4, 1440.79, 13130.5, 1459.41, 13147.2, 1480.48, 13168.9, 1502.72, 13196.2, 1524.85, 13229.6, 1545.58, 13269.5, 1563.64, 13316.5, 1577.73, 13370.9, 1586.58, 13433.5, 1588.9, 13504.5, 1583.42, 13584.6, 1568.85, 13674.2, 1543.91, 13773.9, 1507.31, 16788.3, 339.769, 16877.8, 282.169, 16949.7, 226.571, 17005.5, 173.214, 17046.9, 122.334, 17062.8, 97.8981, 17075.6, 74.1685, 17085.7, 51.1766, 17093.2, 28.9521, 17098.4, 7.52359, 17101.4, -13.0791, 17102.4, -32.8262, 17101.7, -51.6884, 17099.4, -69.6361, 17095.8, -86.6399, 17091.1, -102.67, 17085.4, -117.697, 17072.1, -144.625, 17057.6, -167.185, 17043.4, -185.145, 17031.2, -198.263, 17019.2, -209.198, 18942.7, 82.5757, 21453.7, -801.921, 23801.5, -540.061, 26155.9, -879.842, 26847.9, -1364.96, 26779.3, 3557.56, -91.9316, 3342.92)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(-108.222, 890.108)

[node name="SS2D_Shape_Closed3" type="Node2D" parent="StaticBody2D2"]
texture_repeat = 2
script = ExtResource("7_de7gc")
_points = SubResource("Resource_smp4q")
shape_material = SubResource("Resource_bosvv")
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
visible = false
modulate = Color(1, 1, 1, 0.3)
polygon = PackedVector2Array(13180.5, 960.429, 13640.4, 844.82, 14848.5, -300.515, 15849.6, -137.493, 16073.3, -178.174, 16340, -304.882, 16247.2, -126.9, 13728, 1016.64, 13384, 1089.93)

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(-108.222, 890.108)

[node name="SS2D_Shape_Closed2" type="Node2D" parent="StaticBody2D3"]
texture_repeat = 2
script = ExtResource("7_de7gc")
_points = SubResource("Resource_rtlxv")
shape_material = SubResource("Resource_bosvv")
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
visible = false
modulate = Color(1, 1, 1, 0.3)
polygon = PackedVector2Array(12394.8, 1080.04, 12228.2, 1355.82, 11889.7, 1525.47, 8925.74, 1509.46, 8490.34, 728.441, 11767.4, 1253.4, 11908.2, 1245.96, 12032.8, 1226.36, 12140.2, 1198.64, 12229.8, 1166.86, 12300.8, 1135.08, 12352.4, 1107.36)
